# ReplaceContentInFbx

./: .gitignore  README.md  build.sh
ConvertSceneWithType/: CMakeLists.txt  main.cxx
ReplaceContentInFbx/: CMakeLists.txt  ReplaceMesh.cxx  ReplaceMesh.h  ReplaceShape.cxx  ReplaceShape.h  main.cxx
data/: 3cube_2bs-relative_bs.fbx  3cube_2bs.fbx  longcube.fbx  squarecube_2bs-relative_bs.fbx  squarecube_2bs.fbx
