SET(CMAKE_MIN_REQ_VERSION 2.4)
cmake_minimum_required(VERSION ${CMAKE_MIN_REQ_VERSION})

SET(FBXSDK_ROOT $ENV{FBXSDK_ROOT})
SET(FBXSDK_LIB_FILE $ENV{FBXSDK_LIB_FILE})

INCLUDE("${FBXSDK_ROOT}/samples/CMakeSettings.txt")

FBX_PROJECT(ConvertSceneWithType .)
SET(FBX_TARGET_SOURCE
    main.cxx
    ${FBXSDK_ROOT}/samples/Common/Common.h
    ${FBXSDK_ROOT}/samples/Common/Common.cxx
)
ADD_EXECUTABLE(
   ${FBX_TARGET_NAME}
   ${FBX_TARGET_SOURCE}
)
# SET_TARGET_PROPERTIES( ${FBX_TARGET_NAME}
#     PROPERTIES
#     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/${FBX_ARCH}/${FBX_VARIANT}"
#     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/${FBX_ARCH}/${FBX_VARIANT}"
#     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${FBX_ARCH}/${FBX_VARIANT}"
# )
# ADD_CUSTOM_COMMAND(
#     TARGET ${FBX_TARGET_NAME} POST_BUILD
#     COMMAND ${CMAKE_COMMAND} -E copy_if_different "${FBX_ROOT}/samples/ConvertScene/box.fbx" "${CMAKE_SOURCE_DIR}/box.fbx"
#     COMMAND ln -s "${FBXSDK_LIB_FILE}" "${CMAKE_BINARY_DIR}/bin/${FBX_ARCH}/${FBX_VARIANT}/"
# )

ADD_CUSTOM_COMMAND(
    TARGET ${FBX_TARGET_NAME} POST_BUILD
    # COMMAND echo "${EXECUTABLE_OUTPUT_PATH}/${FBX_TARGET_NAME}"
    # COMMAND echo ""${CMAKE_SOURCE_DIR}/../bin""
    # COMMAND ${CMAKE_COMMAND} -E copy_if_different "${FBX_ROOT}/samples/ConvertScene/box.fbx" "${CMAKE_SOURCE_DIR}/box.fbx"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${EXECUTABLE_OUTPUT_PATH}/${FBX_TARGET_NAME}" "${CMAKE_SOURCE_DIR}/../bin"
    COMMAND ${CMAKE_COMMAND} -E cmake_echo_color --magenta "binary file copied into: ${CMAKE_SOURCE_DIR}/../bin/${FBX_TARGET_NAME}"
)
SET_SAMPLES_GLOBAL_FLAGS()
