SET(CMAKE_MIN_REQ_VERSION 2.4)
cmake_minimum_required(VERSION ${CMAKE_MIN_REQ_VERSION})

SET(FBXSDK_ROOT $ENV{FBXSDK_ROOT})
SET(FBXSDK_LIB_FILE $ENV{FBXSDK_LIB_FILE})

SET(FBXSDK_SAMPLES_DIR "${FBXSDK_ROOT}/samples")

INCLUDE("${FBXSDK_SAMPLES_DIR}/CMakeSettings.txt")

FBX_PROJECT(ReplaceContentInFbx .)

INCLUDE_DIRECTORIES(${FBXSDK_SAMPLES_DIR}/Common)
INCLUDE_DIRECTORIES(${FBXSDK_SAMPLES_DIR}/ImportScene)

AUX_SOURCE_DIRECTORY(${FBXSDK_SAMPLES_DIR}/Common FBX_SAMPLE_COMMON_SOURCE)
FILE(GLOB FBX_SAMPLE_DISPLAY_SOURCE ${FBXSDK_SAMPLES_DIR}/ImportScene/Display*.cxx)

SET(FBX_TARGET_SOURCE
    ReplaceMesh.cxx
    ReplaceShape.cxx
    main.cxx
    ReplaceMesh.h
    ReplaceShape.h
)
ADD_EXECUTABLE(
   ${FBX_TARGET_NAME}
   ${FBX_TARGET_SOURCE}
   ${FBX_SAMPLE_COMMON_SOURCE}
   ${FBX_SAMPLE_DISPLAY_SOURCE}
)
ADD_CUSTOM_COMMAND(
    TARGET ${FBX_TARGET_NAME} POST_BUILD
    # COMMAND echo "${EXECUTABLE_OUTPUT_PATH}/${FBX_TARGET_NAME}"
    # COMMAND echo ""${CMAKE_SOURCE_DIR}/../bin""
    # COMMAND ${CMAKE_COMMAND} -E copy_if_different "${FBX_ROOT}/samples/ConvertScene/box.fbx" "${CMAKE_SOURCE_DIR}/box.fbx"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${EXECUTABLE_OUTPUT_PATH}/${FBX_TARGET_NAME}" "${CMAKE_SOURCE_DIR}/../bin"
    COMMAND ${CMAKE_COMMAND} -E cmake_echo_color --magenta "binary file copied into: ${CMAKE_SOURCE_DIR}/../bin/${FBX_TARGET_NAME}"
)

SET_SAMPLES_GLOBAL_FLAGS()
